@@ -21,7 +21,7 @@
 #define __OPC_SETTINGS_H__
 
 	//! Use CPU comparisons (comment that line to use standard FPU compares)
-	#define OPC_CPU_COMPARE
+	//#define OPC_CPU_COMPARE
 
 	//! Use FCOMI / FCMOV on Pentium-Pro based processors (comment that line to use plain C++)
 	#define OPC_USE_FCOMI
