@@ -101,7 +101,8 @@ AM_CONDITIONAL(X86_64_SYSTEM, test x$cpu64 = xyes)
 
 
 dnl check for required headers
-AC_CHECK_HEADERS( alloca.h stdio.h stdint.h stdlib.h math.h string.h stdarg.h malloc.h float.h time.h sys/time.h )
+AC_CHECK_HEADERS( [alloca.h stdio.h inttypes.h stdint.h stdlib.h math.h \
+                  string.h stdarg.h malloc.h float.h time.h sys/time.h ])
 
 
 opcode=no
@@ -374,6 +375,9 @@ AH_BOTTOM([
 #endif
 #ifdef HAVE_STDINT_H
 #include <stdint.h>
+#endif
+#ifdef HAVE_INTTYPES_H
+#include <inttypes.h>
 #endif
 
 /* an integer type that we can safely cast a pointer to and
